--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Description",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.19.4",
+    "nodemon": "^1.19.2",
     "sqlite3": "^4.1.0"
   }
 }
